--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 :root {
   --green-clr: #0E6651;
   --green-clr-2: #147d64;
@@ -13,6 +14,9 @@
   --bold-fw: 700;
   --extra-bold-fw: 800;
   --black-fw: 900;
+}
+html{
+  font-size: 1rem;
 }
 body {
   font-family: "Inter", sans-serif;
